# Langchain

chains/: chains_basic.py  chains_branches.py  chains_extended.py  chains_parallel.py  chat_model_hist.py  converse_chat_basic.py  langchain.ipynb  main.ipynb  prompt_chat_model.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.py  test.py
rag/: rag_basics.py  rag_basics_VS.py  rag_conversational.py  rag_metadata_VS.py  rag_retriever.py  tempCodeRunnerFile.py
rag/books/: romeo-juliet.txt
